# pj03_SmartFarmAX

./: .gitignore  checkpoint_loader.py  infer.ipynb  main.py  pyproject.toml  retrain.py  train.ipynb  train.py
